# wsdmcup_2024

./: .gitignore  README.md  pyproject.toml
wsdmcup_2024/: .gitignore
wsdmcup_2024/src/: merge_logits.py  predict_train.py  prepare_data.py  prepare_data_ut.py  preprocess_data.ipynb  process_finetune_data.ipynb  process_refinetune.ipynb  run_data.sh  run_fintune.sh  run_fintune_16bit_distill.sh  run_pipeline.sh  run_post_pretrain.sh  run_post_pretrain_ut_four_model.sh  train_ce_model_nice_memory.py  withdraw_train_71k.ipynb
